# mandelbrot

./: Cargo.toml  README.md  build.rs  index.html
src/: f128cmp.c  main.rs  main_opencl.rs  main_opencl_double_linux.rs  main_opencl_double_mingw.rs  main_opencl_overkill.rs  main_rayon.rs  main_rayon_opencl.rs  main_sol.rs
